--- a/style.css
+++ b/style.css
@@ -51,7 +51,10 @@ header button:hover{
     width: 400px;
     height: 250px;
     display: block;
-    margin: 20% auto;
+    margin-top: 15%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 5%;
 }
 .container-login label[for="text"]{
     text-align: justify;
@@ -114,6 +117,7 @@ header button:hover{
     color: white;
     text-decoration: none;
 }
+
 .container{
     position: fixed;
     top: 0;
@@ -204,7 +208,6 @@ header button:hover{
     height: 50vh;
     text-align: center;
     position: relative;
-    /* background: red; */
 }
 .box button{
     width: 100px;
