--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@ header button:hover{
     width: 400px;
     height: 250px;
     display: block;
-    margin-top: 15%;
+    margin-top: 35%;
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 5%;
@@ -59,8 +59,9 @@ header button:hover{
 .container-login label[for="text"]{
     text-align: justify;
     display: block;
-    padding: 0 10px;
+    padding: 0 30px;
     margin-left: 18px;
+    text-align: right;
 }
 .container-login span{
     color: red;
@@ -78,6 +79,7 @@ header button:hover{
     font-size: 15px;
     font-family: 'AbeeZee' , 'Tajawal';
     color: white;
+    text-align: right;
 }
 .container-login button{
     padding: 5px 20px;
