--- a/style.css
+++ b/style.css
@@ -362,6 +362,7 @@ p{
 @media only screen and (max-width:350px){
     .ContainerBox{
         width: 90%;
+         margin-top: 40%;
     }
     .footer{
         width: 100%;
