--- a/style.css
+++ b/style.css
@@ -377,21 +377,18 @@ footer p::after{
     margin-left: 48px;
 }
 footer ul li{
-    list-style: none; 
     display: inline-block;
-    padding: 10px 15px; 
+    padding: 10px 15px;
+    list-style: none;
 }
 footer ul li a{
     color: white;
     font-size: 20px;
-
-    text-decoration: none;
-
 }
 
 .QuranContainer{
     width: 600px;
-    height: 83vh;
+    height: 85vh;
     background: #fff;
     display: block;
     margin: 0 auto;
@@ -412,6 +409,7 @@ footer ul li a{
 .quran{
     width: 100%;
     height: 75vh;
+    overflow-y: auto;
 }
 .quran h1{
     padding: 15px 30px;
