--- a/style.css
+++ b/style.css
@@ -355,6 +355,8 @@ footer{
     margin: 0 auto;
     width: 300px;
     text-align: center;
+    position: absolute;
+    bottom:0;
 }
 footer p{
     font-size: 18px;
