--- a/style.css
+++ b/style.css
@@ -47,6 +47,7 @@ header{
     color: #131537;
     background: #17D4FE;
 }
+
 .container-login{
     width: 400px;
     height: 250px;
@@ -228,7 +229,6 @@ header{
     font-weight: 900;
     cursor: pointer;
     margin: 50px -40px;
-
     
 }
 .box button:hover{
@@ -355,8 +355,6 @@ footer{
     margin: 0 auto;
     width: 300px;
     text-align: center;
-    position: absolute;
-    bottom:0;
 }
 footer p{
     font-size: 18px;
@@ -397,6 +395,7 @@ footer ul li a{
     color: black;
     position: relative;
     border-radius: 4px;
+    overflow: hidden;
 }
 .QuranHeader{
     width: 100%;
@@ -410,8 +409,9 @@ footer ul li a{
 }
 .quran{
     width: 100%;
-    height: 75vh;
-    overflow-y: auto;
+    height: 100%;
+    background: #fff;
+    overflow: hidden;
 }
 .quran h1{
     padding: 15px 30px;
@@ -419,6 +419,12 @@ footer ul li a{
     font-weight: 500;
     text-align: center;
     line-height: 35px;
+}
+.quran img{
+    width: 500px;
+    height: 100%;
+    display: flex;
+    margin: 0 auto;
 }
 .QuranContainer button{
     position: absolute;
@@ -436,6 +442,7 @@ footer ul li a{
     -o-transition: .8s ease;
     -ms-transition: .8s ease;
     border-radius: 0 5px 5px 0;
+    display: none;
 }
 .next
 {
@@ -492,18 +499,146 @@ footer ul li a{
     }
     .QuranContainer{
         width: 90%;
+        height: auto;
     }
     .QuranContainer h1{
         font-size: 15px;
         padding-left: 10px;
         padding-right: 10px;
     }
-    .quran{
-        overflow-y: auto;
-        height: 70vh;
-        margin-bottom: 2%;
+    .quran img{
+        width: 100%;
+        height: auto;
+    }
+
+}
+.loadingContainer{
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    right: 0;
+    left: 0;
+    background: #131537;
+    z-index: 10;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+
+.loader {
+    width: 100px;
+    height: 100px;
+    line-height: 150px;
+    margin: 100px auto;
+    position: relative;
+    box-sizing: border-box;
+    text-align: center;
+    z-index: 0;
+    text-transform: uppercase;
+  }
+  
+  .loader:before,
+  .loader:after {
+    opacity: 0;
+    box-sizing: border-box;
+    content: "\0020";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border-radius: 100px;
+    border: 5px solid #17D4FE;
+    box-shadow: 0 0 35px #17D4FE, inset 0 0 35px  #17D4FE;
+  }
+  
+  .loader:after {
+    z-index: 1;
+    animation: gogoloader 2s infinite 1s;
+    -webkit-animation: gogoloader 2s infinite 1s;
+    -moz-animation: gogoloader 2s infinite 1s;
+    -ms-animation: gogoloader 2s infinite 1s;
+    -o-animation: gogoloader 2s infinite 1s;
+  }
+  
+  .loader:before {
+    z-index: 2;
+    animation: gogoloader 2s infinite;
+    -moz-animation: gogoloader 2s infinite;
+    -ms-animation: gogoloader 2s infinite;
+    -o-animation: gogoloader 2s infinite;
+    -webkit-animation: gogoloader 2s infinite;
+  }
+  @keyframes gogoloader{
+    0% {
+        -webkit-transform: scale(0);
+        opacity: 0;
+      }
+      50% {
+        opacity: 1;
+      }
+      100% {
+        -webkit-transform: scale(1);
+        opacity: 0;
+      }
+  }
+  @-webkit-keyframes gogoloader {
+    0% {
+      -webkit-transform: scale(0);
+      opacity: 0;
+    }
+    50% {
+      opacity: 1;
+    }
+    100% {
+      -webkit-transform: scale(1);
+      opacity: 0;
+    }
+  }
+  @-moz-keyframes gogoloader {
+    0% {
+      -webkit-transform: scale(0);
+      opacity: 0;
+    }
+    50% {
+      opacity: 1;
+    }
+    100% {
+      -webkit-transform: scale(1);
+      opacity: 0;
+    }
+ 
+}
+
+@-o-keyframes gogoloader {
+    0% {
+      -webkit-transform: scale(0);
+      opacity: 0;
+    }
+    50% {
+      opacity: 1;
+    }
+    100% {
+      -webkit-transform: scale(1);
+      opacity: 0;
     }
 }
+@-ms-keyframes gogoloader {
+    0% {
+      -webkit-transform: scale(0);
+      opacity: 0;
+    }
+    50% {
+      opacity: 1;
+    }
+    100% {
+      -webkit-transform: scale(1);
+      opacity: 0;
+    }
+}
+ 
 @media only screen and (min-width:481px) and (max-width:767px){
     .QuranContainer{
         width: 90%;
