--- a/style.css
+++ b/style.css
@@ -42,12 +42,38 @@ header{
     -moz-transition: .8s ease;
     -o-transition: .8s ease;
     -ms-transition: .8s ease;
+    position: relative;
 }
 .btn-bars:hover{
     color: #131537;
     background: #17D4FE;
+
+}
+.btn-bars:hover #number{
+    color: #131537 !important;
+    background: #17D4FE !important;
 }
 
+.btn-bars span{
+    position: absolute;
+    top: 0;
+    right: 0;
+    margin-top: -10px;
+    margin-right: -10px;
+    font-size: 15px;
+    font-weight: 900;
+    background: rgb(43, 207, 98);
+    color: white;
+    border-radius: 100px;
+    padding: 0 5px;
+    color: white;
+    transition: .8s ease;
+    -webkit-transition: .8s ease;
+    -moz-transition: .8s ease;
+    -o-transition: .8s ease;
+    -ms-transition: .8s ease;
+    box-shadow: 0 0 1px 3px #131537;
+}
 .container-login{
     width: 400px;
     height: 250px;
@@ -212,7 +238,7 @@ header{
     text-align: center;
     position: relative;
 }
-.box button{
+.box .btn-add{
     width: 100px;
     height: 100px;
     border: 3px solid #17D4FE;
@@ -229,12 +255,12 @@ header{
     font-weight: 900;
     cursor: pointer;
     margin: 50px -40px;
-    
 }
-.box button:hover{
+.box .btn-add:hover{
     color: #131537;
     background: #17D4FE;
 }
+
 .box h1{
     font-weight: lighter;
     font-size: 25px;
@@ -464,54 +490,6 @@ footer ul li a{
   }
 
 
-@media only screen and (max-width:350px){
-    .QuranHeader img{
-        width: 200px;
-        margin-top: 5%;
-    }
-    .ContainerBox{
-        width: 90%;
-    }
-    .footer{
-        width: 100%;
-    }
-    .QuranContainer{
-        width: 95% !important; 
-    }
-    #number{
-        width: 95%;
-    }
-
-}
-@media only screen and (max-width:480px){
-    .container-login{
-        width: 100%;
-        margin-top: 40%;
-    }
-    .popup{
-        width: 90%;
-    }
-    .box{
-        width: 100%;
-    }
-    .clock{
-        margin-top: 15%;
-    }
-    .QuranContainer{
-        width: 90%;
-        height: auto;
-    }
-    .QuranContainer h1{
-        font-size: 15px;
-        padding-left: 10px;
-        padding-right: 10px;
-    }
-    .quran img{
-        width: 100%;
-        height: auto;
-    }
-
-}
 .loadingContainer{
     width: 100%;
     height: 100%;
@@ -537,6 +515,7 @@ footer ul li a{
     text-align: center;
     z-index: 0;
     text-transform: uppercase;
+    display: none;
   }
   
   .loader:before,
@@ -611,7 +590,6 @@ footer ul li a{
     }
  
 }
-
 @-o-keyframes gogoloader {
     0% {
       -webkit-transform: scale(0);
@@ -638,7 +616,129 @@ footer ul li a{
       opacity: 0;
     }
 }
- 
+
+.containerZkr{
+    position: fixed;
+    top: 0;
+    right: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: rgba(0, 0, 0, 0.185);
+}
+.popupZkr{
+    width: 500px;
+    padding: 10px;
+    height: auto;
+    border-radius: 10px;
+    background: white;
+    animation: pop 1s;
+    -webkit-animation: pop 1s;
+    -moz-animation: pop 1s;
+    -o-animation: pop 1s;
+    -ms-animation: pop 1s;
+}
+.popupZkr h1{
+    color: black;
+    font-size: 16px;
+    padding: 20px 15px;
+    font-weight: 500;
+    text-align: right;
+}
+@keyframes pop{
+     from{
+         opacity: 0;
+     }
+     to{
+         opacity: 1;
+     }
+ }
+@-webkit-keyframes pop{
+    from{
+        opacity: 0;
+    }
+    to{
+        opacity: 1;
+    }
+}
+@-moz-keyframes pop{
+    from{
+        opacity: 0;
+    }
+    to{
+        opacity: 1;
+    }
+}
+@-o-keyframes pop{
+    from{
+        opacity: 0;
+    }
+    to{
+        opacity: 1;
+    }
+}
+@-ms-keyframes pop{
+    from{
+        opacity: 0;
+    }
+    to{
+        opacity: 1;
+    }
+}
+@media only screen and (max-width:350px){
+    .QuranHeader img{
+        width: 200px;
+        margin-top: 5%;
+    }
+    .ContainerBox{
+        width: 90%;
+    }
+    .footer{
+        width: 100%;
+    }
+    .QuranContainer{
+        width: 95% !important; 
+    }
+    #number{
+        width: 95%;
+    }
+
+}
+@media only screen and (max-width:480px){
+    .container-login{
+        width: 100%;
+        margin-top: 40%;
+    }
+    .popup{
+        width: 90%;
+    }
+    .box{
+        width: 100%;
+    }
+    .clock{
+        margin-top: 15%;
+    }
+    .QuranContainer{
+        width: 90%;
+        height: auto;
+    }
+    .QuranContainer h1{
+        font-size: 15px;
+        padding-left: 10px;
+        padding-right: 10px;
+    }
+    .quran img{
+        width: 100%;
+        height: auto;
+    }
+    .popupZkr{
+        width: 90% !important;
+    }
+
+}
 @media only screen and (min-width:481px) and (max-width:767px){
     .QuranContainer{
         width: 90%;
@@ -650,4 +750,5 @@ footer ul li a{
     .QuranContainer h1{
         font-size: 15px;
     }
+
 }
