--- a/style.css
+++ b/style.css
@@ -155,6 +155,8 @@ header{
     width: 100%;
     height: 100%;
     display: none;
+    justify-content: center;
+    align-items: center;
 }
 .popup{
     width: 300px;
@@ -164,53 +166,8 @@ header{
     background: #0b0b1a;
     border-radius: 5px;
     text-align: center;
-    animation: animate 1s;
-    -webkit-animation: animate 1s;
-    -moz-animation: animate 1s;
-    -o-animation: animate 1s;
-    -ms-animation: animate 1s;
+}
 
-}
-@keyframes animate {
-    from{
-        margin:0 auto;
-        opacity: 0;
-    }
-    to{
-        margin: 15% auto;
-        opacity: 1;
-    }
-}
-@-webkit-keyframes animate{
-    from{
-        margin:0 auto;
-        opacity: 0;
-    }
-    to{
-        margin: 15% auto;
-        opacity: 1;
-    }
-}
-@-o-keyframes animate{
-    from{
-        margin:0 auto;
-        opacity: 0;
-    }
-    to{
-        margin: 15% auto;
-        opacity: 1;
-    }
-}
-@-moz-keyframes animate{
-    from{
-        margin:0 auto;
-        opacity: 0;
-    }
-    to{
-        margin: 15% auto;
-        opacity: 1;
-    }
-}
 .popup h1{
     font-weight: lighter;
     font-size: 18px;
@@ -515,7 +472,6 @@ footer ul li a{
     text-align: center;
     z-index: 0;
     text-transform: uppercase;
-    display: block;
   }
   
   .loader:before,
