--- a/style.css
+++ b/style.css
@@ -810,6 +810,7 @@ footer ul li a{
     }
     .btn-restart{
         margin-right: -25%;
+        margin-top: -60%;
     }
 }
 @media only screen and (max-width:480px){
